--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,11 @@
 # CHANGELOG
 
+## v0.2 - 2017-03-17
+
+ - Expanded name to avoid confusion with wondible's mod
+ - Properly tagged mod to show support for PA classic and Titans
+ - Dropped unnecessary client mod
+
 ## v0.1 - 2017-03-17
 
  - Implemented 13 personalities
