Add Absurd Galactic War personality

--- a/ui/main/_i18n/locales/de/ai_personalities.json
+++ b/ui/main/_i18n/locales/de/ai_personalities.json
@@ -37,5 +37,8 @@
     },
     "Absurd Turtle": {
         "message": "Absurd Schildkröte"
+    },
+    "Absurd Galactic War": {
+        "message": "Absurd Galaktischer Krieg"
     }
 }
