--- a/ui/main/_i18n/locales/en-US/ai_personalities.json
+++ b/ui/main/_i18n/locales/en-US/ai_personalities.json
@@ -37,5 +37,8 @@
     },
     "Absurd Turtle": {
         "message": "Absurd Turtle"
+    },
+    "Absurd Galactic War": {
+        "message": "Absurd Galactic War"
     }
 }
