--- a/ui/main/_i18n/locales/es-ES/ai_personalities.json
+++ b/ui/main/_i18n/locales/es-ES/ai_personalities.json
@@ -37,5 +37,8 @@
     },
     "Absurd Turtle": {
         "message": "Absurda Tortuga"
+    },
+    "Absurd Galactic War": {
+        "message": "Absurda Guerra galáctica"
     }
 }
