--- a/ui/main/_i18n/locales/it/ai_personalities.json
+++ b/ui/main/_i18n/locales/it/ai_personalities.json
@@ -37,5 +37,8 @@
     },
     "Absurd Turtle": {
         "message": "Assurda Tartaruga"
+    },
+    "Absurd Galactic War": {
+        "message": "Assurda Guerra galattica"
     }
 }
