--- a/ui/main/_i18n/locales/nl/ai_personalities.json
+++ b/ui/main/_i18n/locales/nl/ai_personalities.json
@@ -37,5 +37,8 @@
     },
     "Absurd Turtle": {
         "message": "Absurd Schildpad"
+    },
+    "Absurd Galactic War": {
+        "message": "Assurda Galactische oorlog"
     }
 }
