--- a/ui/main/_i18n/locales/fr/ai_personalities.json
+++ b/ui/main/_i18n/locales/fr/ai_personalities.json
@@ -37,5 +37,8 @@
     },
     "Absurd Turtle": {
         "message": "Dément Tortue"
+    },
+    "Absurd Galactic War": {
+        "message": "Dément Guerre galactique"
     }
 }
