--- a/ui/main/_i18n/locales/nl/ai_personalities.json
+++ b/ui/main/_i18n/locales/nl/ai_personalities.json
@@ -1,44 +1,44 @@
 {
-  "Absurd Land": {
-    "message": "Absurd Land"
+  "AIP-Land": {
+    "message": "AIP-Land"
   },
-  "Absurd Tank": {
-    "message": "Absurd Tank"
+  "AIP-Tank": {
+    "message": "AIP-Tank"
   },
-  "Absurd Bot": {
-    "message": "Absurd Bot"
+  "AIP-Bot": {
+    "message": "AIP-Bot"
   },
-  "Absurd Air": {
-    "message": "Absurd Lucht"
+  "AIP-Air": {
+    "message": "AIP-Lucht"
   },
-  "Absurd Balanced": {
-    "message": "Absurd Evenwichtige"
+  "AIP-Balanced": {
+    "message": "AIP-Evenwichtige"
   },
-  "Absurd Naval": {
-    "message": "Absurd Zee"
+  "AIP-Naval": {
+    "message": "AIP-Zee"
   },
-  "Absurd Orbital": {
-    "message": "Absurd Orbital"
+  "AIP-Orbital": {
+    "message": "AIP-Orbital"
   },
-  "Absurd Low Tech": {
-    "message": "Absurd Low Tech"
+  "AIP-Low Tech": {
+    "message": "AIP-Low Tech"
   },
-  "Absurd Fast Tech": {
-    "message": "Absurd Fast Tech"
+  "AIP-Fast Tech": {
+    "message": "AIP-Fast Tech"
   },
-  "Absurd Cautious": {
-    "message": "Absurd Voorzichtig"
+  "AIP-Cautious": {
+    "message": "AIP-Voorzichtig"
   },
-  "Absurd Aggressive": {
-    "message": "Absurd Agressief"
+  "AIP-Aggressive": {
+    "message": "AIP-Agressief"
   },
-  "Absurd Rush": {
-    "message": "Absurd Rush"
+  "AIP-Rush": {
+    "message": "AIP-Rush"
   },
-  "Absurd Turtle": {
-    "message": "Absurd Schildpad"
+  "AIP-Turtle": {
+    "message": "AIP-Schildpad"
   },
-  "Absurd Galactic War": {
+  "AIP-Galactic War": {
     "message": "Assurda Galactische oorlog"
   }
 }
