Fix English translation

--- a/ui/main/_i18n/locales/en-US/ai_personalities.json
+++ b/ui/main/_i18n/locales/en-US/ai_personalities.json
@@ -45,7 +45,7 @@
     "message": "AIP-Rush"
   },
   "AIP-Swarm": {
-    "message": "AIP-Turtle"
+    "message": "AIP-Swarm"
   },
   "AIP-Synchronous": {
     "message": "AIP-Synchronous"
