Fix English translation

--- a/ui/main/_i18n/locales/en-US/ai_personalities.json
+++ b/ui/main/_i18n/locales/en-US/ai_personalities.json
@@ -12,10 +12,10 @@
     "message": "AIP-Cautious"
   },
   "AIP-Defender": {
-    "message": "AIP-Turtle"
+    "message": "AIP-Defender"
   },
   "AIP-Economist": {
-    "message": "AIP-Turtle"
+    "message": "AIP-Economist"
   },
   "AIP-Fast Tech": {
     "message": "AIP-Fast Tech"
