--- a/ui/main/_i18n/locales/es-ES/ai_personalities.json
+++ b/ui/main/_i18n/locales/es-ES/ai_personalities.json
@@ -1,41 +1,41 @@
 {
-  "AIP-Aggressive": {
-    "message": "AIP-Agresivo"
+  "AIP Aggressive": {
+    "message": "AIP Agresivo"
   },
-  "AIP-Air": {
-    "message": "AIP-Aéreo"
+  "AIP Air": {
+    "message": "AIP Aéreo"
   },
-  "AIP-Balanced": {
-    "message": "AIP-Equilibrado"
+  "AIP Balanced": {
+    "message": "AIP Equilibrado"
   },
-  "AIP-Bot": {
-    "message": "AIP-Robot"
+  "AIP Bot": {
+    "message": "AIP Robot"
   },
-  "AIP-Cautious": {
-    "message": "AIP-Prudente"
+  "AIP Cautious": {
+    "message": "AIP Prudente"
   },
-  "AIP-Fast Tech": {
-    "message": "AIP-Tecnología Rápida"
+  "AIP Fast Tech": {
+    "message": "AIP Tecnología Rápida"
   },
-  "AIP-Land": {
-    "message": "AIP-Terrestre"
+  "AIP Land": {
+    "message": "AIP Terrestre"
   },
-  "AIP-Low Tech": {
-    "message": "AIP-Baja Tecnología"
+  "AIP Low Tech": {
+    "message": "AIP Baja Tecnología"
   },
-  "AIP-Naval": {
-    "message": "AIP-Naval"
+  "AIP Naval": {
+    "message": "AIP Naval"
   },
-  "AIP-Orbital": {
-    "message": "AIP-Orbital"
+  "AIP Orbital": {
+    "message": "AIP Orbital"
   },
-  "AIP-Rush": {
-    "message": "AIP-Rush"
+  "AIP Rush": {
+    "message": "AIP Rush"
   },
-  "AIP-Tank": {
-    "message": "AIP-Tanque"
+  "AIP Tank": {
+    "message": "AIP Tanque"
   },
-  "AIP-Turtle": {
-    "message": "AIP-Tortuga"
+  "AIP Turtle": {
+    "message": "AIP Tortuga"
   }
 }
