--- a/ui/main/_i18n/locales/fr/ai_personalities.json
+++ b/ui/main/_i18n/locales/fr/ai_personalities.json
@@ -1,38 +1,38 @@
 {
-  "AIP-Aggressive": {
-    "message": "AIP-Agressive"
+  "AIP Aggressive": {
+    "message": "AIP Agressive"
   },
-  "AIP-Air": {
-    "message": "AIP-Aérienne"
+  "AIP Air": {
+    "message": "AIP Aérienne"
   },
-  "AIP-Bot": {
-    "message": "AIP-Robot"
+  "AIP Bot": {
+    "message": "AIP Robot"
   },
-  "AIP-Cautious": {
-    "message": "AIP-Prudente"
+  "AIP Cautious": {
+    "message": "AIP Prudente"
   },
-  "AIP-Fast Tech": {
-    "message": "AIP-Technologie Rapide"
+  "AIP Fast Tech": {
+    "message": "AIP Technologie Rapide"
   },
-  "AIP-Land": {
-    "message": "AIP-Terrestre"
+  "AIP Land": {
+    "message": "AIP Terrestre"
   },
-  "AIP-Low Tech": {
-    "message": "AIP-Basse Technologie"
+  "AIP Low Tech": {
+    "message": "AIP Basse Technologie"
   },
-  "AIP-Naval": {
-    "message": "AIP-Navale"
+  "AIP Naval": {
+    "message": "AIP Navale"
   },
-  "AIP-Orbital": {
-    "message": "AIP-Orbitale"
+  "AIP Orbital": {
+    "message": "AIP Orbitale"
   },
-  "AIP-Rush": {
-    "message": "AIP-Rush"
+  "AIP Rush": {
+    "message": "AIP Rush"
   },
-  "AIP-Tank": {
-    "message": "AIP-Tank"
+  "AIP Tank": {
+    "message": "AIP Tank"
   },
-  "AIP-Turtle": {
-    "message": "AIP-Tortue"
+  "AIP Turtle": {
+    "message": "AIP Tortue"
   }
 }
