--- a/ui/main/_i18n/locales/it/ai_personalities.json
+++ b/ui/main/_i18n/locales/it/ai_personalities.json
@@ -1,38 +1,38 @@
 {
-  "AIP-Aggressive": {
-    "message": "AIP-Aggressivo"
+  "AIP Aggressive": {
+    "message": "AIP Aggressivo"
   },
-  "AIP-Air": {
-    "message": "AIP-Aereo"
+  "AIP Air": {
+    "message": "AIP Aereo"
   },
-  "AIP-Bot": {
-    "message": "AIP-Bot"
+  "AIP Bot": {
+    "message": "AIP Bot"
   },
-  "AIP-Cautious": {
-    "message": "AIP-Cauto"
+  "AIP Cautious": {
+    "message": "AIP Cauto"
   },
-  "AIP-Fast Tech": {
-    "message": "AIP-Tech Veloce"
+  "AIP Fast Tech": {
+    "message": "AIP Tech Veloce"
   },
-  "AIP-Land": {
-    "message": "AIP-Terrestri"
+  "AIP Land": {
+    "message": "AIP Terrestri"
   },
-  "AIP-Low Tech": {
-    "message": "AIP-Low Tech"
+  "AIP Low Tech": {
+    "message": "AIP Low Tech"
   },
-  "AIP-Naval": {
-    "message": "AIP-Navale"
+  "AIP Naval": {
+    "message": "AIP Navale"
   },
-  "AIP-Orbital": {
-    "message": "AIP-Orbitali"
+  "AIP Orbital": {
+    "message": "AIP Orbitali"
   },
-  "AIP-Rush": {
-    "message": "AIP-Rush"
+  "AIP Rush": {
+    "message": "AIP Rush"
   },
-  "AIP-Tank": {
-    "message": "AIP-Carro"
+  "AIP Tank": {
+    "message": "AIP Carro"
   },
-  "AIP-Turtle": {
-    "message": "AIP-Tartaruga"
+  "AIP Turtle": {
+    "message": "AIP Tartaruga"
   }
 }
